# sae-pythia

./: .gitignore  FINDINGS.md  LICENSE  README.md  pyproject.toml
dashboards/: autointerp_L3.json  autointerp_L3_200M_dedupe.json  autointerp_L3_50M.json  autointerp_L3_50M_dedupe.json  autointerp_L6.json  autointerp_L6_200M_dedupe.json  autointerp_L6_400M_dedupe.json  autointerp_L6_50M.json  autointerp_L6_50M_dedupe.json  autointerp_L9.json  autointerp_L9_200M_dedupe.json  autointerp_L9_50M.json  autointerp_L9_50M_dedupe.json  feature_match_L3_scale.json  feature_match_L9.json  features_L3_50M_dedupe.json  features_L3_sample_dedupe.json  features_L6_200M_dedupe.json  features_L6_50M_dedupe.json  features_L9_50M_dedupe.json  features_L9_sample_dedupe.json  features_sample.json  features_sample_dedupe.json  geometry.json  layer_comparison.json  layer_comparison_50M.json
scripts/: analyze_geometry.py  build_50m_dashboards.sh  build_dashboard.py  compare_layers.py  match_features.py  run_autointerp.py  sample_dashboard.py  train_sae.py
src/sae/: __init__.py  activations.py  autointerp.py  dashboard.py  model.py  train.py
tests/: test_sae.py
