[project]
name = "sae-pythia"
version = "0.1.0"
description = "Top-k sparse autoencoders for Pythia-160M residual streams"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Florio-Harrah Labs" }]
dependencies = [
    "torch>=2.4",
    "transformers>=4.44",
    "datasets>=2.20",
    "einops>=0.8",
    "numpy>=1.26",
    "tqdm>=4.66",
    "anthropic>=0.40",
    "zstandard>=0.22",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sae"]

[tool.ruff]
line-length = 100
